{
    "name": "Actions",
    "maps": [
        {
            "name": "gameplay",
            "id": "53fb1fd5-82fb-4bea-914e-868f58a22623",
            "actions": [
                {
                    "name": "primary",
                    "type": "Button",
                    "id": "7e7a3faf-3c8b-4b30-b35a-2b450937d709",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "secondary",
                    "type": "Button",
                    "id": "e8261a06-7736-49ad-96cf-7aa008551933",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "move",
                    "type": "Value",
                    "id": "ce933f27-8d2a-4d49-b5a4-d5a76c46c7cc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "7166bf88-feeb-4cff-be3d-dbaaeb228cf8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "mouse_position",
                    "type": "Value",
                    "id": "e53d4118-9fdb-4543-8b2a-5723484886ec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "mouse_scroll",
                    "type": "Value",
                    "id": "ce9503d0-f2a2-4424-b0a5-7c3814713cf3",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "do_raycast",
                    "type": "Button",
                    "id": "c87ca580-0b2b-49f4-b423-f59fcd6e08be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "show_pointer_over_game_obj",
                    "type": "Button",
                    "id": "967c0718-6971-4b43-a827-0ff26ad2d40e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "220c4a8d-309b-46ed-9ba8-c85bc3a77a4d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "primary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61fefd1d-2c54-472f-99bb-2cad490e7642",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "secondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "244af88a-2a70-4128-bd58-57c24e86f044",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "63f89e20-7d65-4ff8-a00f-71b9deb8b151",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "75c3a912-4d94-4376-980c-07c9d45025ee",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e601fbc-6375-4b34-9261-306e096a350c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7b513bef-37dd-45ec-8d7e-6c663253c5da",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5a41ccde-87bb-4861-846a-1db82f14a5b4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fd83a50-72cc-4fd8-9575-5abb58f4a747",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse_position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e466efe-c6b8-43c8-9c2c-6085833be8e7",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse_scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c7b412e-0395-43b2-9760-e7268038ded3",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "do_raycast",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be8cc622-8830-4da8-85cb-299dde0b5dea",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "show_pointer_over_game_obj",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ui",
            "id": "5d203d61-a4da-441a-8cf1-a742c06c089d",
            "actions": [
                {
                    "name": "toggle_inventory",
                    "type": "Button",
                    "id": "e60c4c82-7cc6-40fd-86d2-53acbf7bea32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "toggle_dialog",
                    "type": "Button",
                    "id": "280c9589-f489-454a-87ea-b24cc9e645c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "next",
                    "type": "Button",
                    "id": "268b869d-d5d0-4255-abc2-eb20bb42894e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "previous",
                    "type": "Button",
                    "id": "dc1a67e5-2a04-4d08-a3b6-3f5568acca79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hold_next",
                    "type": "Button",
                    "id": "2658e792-b90f-4b0b-877a-a8803e9a01c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hold_prev",
                    "type": "Button",
                    "id": "c4ca0855-a945-4afc-b8d1-c54a5b9eb1a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot1",
                    "type": "Button",
                    "id": "0e3450c2-1ede-4ae3-a94c-885121ecde64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot2",
                    "type": "Button",
                    "id": "8020ef76-edaa-422a-88c2-fb2b6a4dcf2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot3",
                    "type": "Button",
                    "id": "040ef9ad-0b0e-4c85-94f3-a5427c27260b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot4",
                    "type": "Button",
                    "id": "e327853a-3099-45e6-9f36-fa48fe41a6fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot5",
                    "type": "Button",
                    "id": "b657c228-9701-4fa1-bb43-2bb40cee6a57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot6",
                    "type": "Button",
                    "id": "6e20f1a4-2070-443e-a6c8-837809699b6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot7",
                    "type": "Button",
                    "id": "1ece3ee8-c58b-4307-840b-d713c12fb0e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot8",
                    "type": "Button",
                    "id": "1da7acaa-33d8-4ba9-8436-716426765663",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "slot9",
                    "type": "Button",
                    "id": "e42a975a-4487-4293-a657-850ae3c2d7a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7f5696e-06c4-4fd3-b4ac-d69405fd0c93",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "toggle_inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "476c564c-414d-4c36-8a95-45f3ee544e82",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "toggle_dialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9cb640a-10d9-4e1d-acc9-cfac4ef6c099",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "hold_next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8777a217-8607-409f-9007-687063add93d",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "hold_prev",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ed1ea7c-b105-492a-bbaa-577248f3bd78",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d11c24c-bdcd-46e4-8485-bb8722dcd8b3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "previous",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecffe936-bce6-4330-9b56-c2bfbd12b84d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3901c8d-ada7-4f52-a425-7d165ee6523f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "decbebe0-fbe5-46a8-8bf1-2896c686e651",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "591f2ac8-8af1-4edf-a57c-2c45b8cdcb1d",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44c3f924-4746-4042-864e-50f1f0f5bfe3",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a05fc7f9-fc0f-49bf-84fa-57e98ce042dd",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8583b46c-9aed-4c49-8c39-9892557a095a",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fb501eb-be8e-4a09-848f-592444be4fb7",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d8b66e7-99bd-4275-a35b-2d97bba58035",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "slot9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "visualiser",
            "id": "c9c16945-db18-4622-8269-b8c006b3d3f0",
            "actions": [
                {
                    "name": "spawn_carver",
                    "type": "Button",
                    "id": "b0965384-54b6-429f-8a13-ea16987d630d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "step_to_next_node",
                    "type": "Button",
                    "id": "017be021-97bc-4423-873e-a3ca18ef4b58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "mouse_position",
                    "type": "Value",
                    "id": "871172a2-eb39-4225-a405-be7ffd60cb40",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "step",
                    "type": "Button",
                    "id": "01b209cf-5185-4d40-ba14-42b67c9beb51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "select_next",
                    "type": "Button",
                    "id": "81fe9570-bfe9-4806-9758-86e3afda6c8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "select_prev",
                    "type": "Button",
                    "id": "2ef9af4c-f14e-4bae-a7cd-5ba775999196",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "toggle_line",
                    "type": "Button",
                    "id": "e8d49ec6-099d-4585-807a-12235939ed01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7fb26946-c38b-4407-908e-c143c024196c",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "spawn_carver",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c01f356-d246-4ce3-a941-1132830e4b8b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "step_to_next_node",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3adde43c-ad06-418d-9e1a-81fdbe99f28d",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse_position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09a02450-7aa0-413c-93f5-cbc3b22df661",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "step",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f60cb246-1327-4397-856b-81e7c43f2d57",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select_next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13bae6bc-74a2-4145-93da-8fa710abdc98",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select_prev",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5829cf02-f51e-4588-ac58-45769326a652",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "toggle_line",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}